// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vuepress-plugin-container enhance-app-ts.html 1`] = `
<!DOCTYPE html>
<html lang="en-US">

  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>VuePress</title>
    <meta name="description" content="">


    <!--before-resource-hints-->
    <link rel="preload" href="/assets/css/0.styles.css" as="style">
    <link rel="preload" href="/assets/js/styles.js" as="script">
    <link rel="preload" href="/assets/js/app.js" as="script">
    <link rel="preload" href="/assets/js/3.js" as="script">
    <link rel="preload" href="/assets/js/5.js" as="script">
    <link rel="prefetch" href="/assets/js/2.js">
    <link rel="prefetch" href="/assets/js/4.js">
    <link rel="prefetch" href="/assets/js/6.js">
    <link rel="prefetch" href="/assets/js/7.js">
    <!--after-resource-hints-->
    <link rel="stylesheet" href="/assets/css/0.styles.css">
  </head>

  <body>
    <!--before-vue-ssr-outlet-->
    <div id="app">
      <div>
        <h1>Hello, TypeScript</h1>
        <div class="content__default">
          <div>
            <h1>Test Component</h1>
          </div>
        </div>
      </div>
      <div class="global-ui"></div>
    </div>
    <!--after-vue-ssr-outlet-->
    <!--before-scripts-->
    <script src="/assets/js/styles.js" defer></script>
    <script src="/assets/js/3.js" defer></script>
    <script src="/assets/js/5.js" defer></script>
    <script src="/assets/js/app.js" defer></script>
    <!--after-scripts-->
  </body>

</html>
`;

exports[`vuepress-plugin-container index.html 1`] = `
<!DOCTYPE html>
<html lang="en-US">

  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>VuePress</title>
    <meta name="description" content="">


    <!--before-resource-hints-->
    <link rel="preload" href="/assets/css/0.styles.css" as="style">
    <link rel="preload" href="/assets/js/styles.js" as="script">
    <link rel="preload" href="/assets/js/app.js" as="script">
    <link rel="preload" href="/assets/js/3.js" as="script">
    <link rel="preload" href="/assets/js/4.js" as="script">
    <link rel="prefetch" href="/assets/js/2.js">
    <link rel="prefetch" href="/assets/js/5.js">
    <link rel="prefetch" href="/assets/js/6.js">
    <link rel="prefetch" href="/assets/js/7.js">
    <!--after-resource-hints-->
    <link rel="stylesheet" href="/assets/css/0.styles.css">
  </head>

  <body>
    <!--before-vue-ssr-outlet-->
    <div id="app">
      <div>
        <h1>Hello, TypeScript</h1>
        <div class="content__default">
          <p>readme</p>
        </div>
      </div>
      <div class="global-ui"></div>
    </div>
    <!--after-vue-ssr-outlet-->
    <!--before-scripts-->
    <script src="/assets/js/styles.js" defer></script>
    <script src="/assets/js/3.js" defer></script>
    <script src="/assets/js/4.js" defer></script>
    <script src="/assets/js/app.js" defer></script>
    <!--after-scripts-->
  </body>

</html>
`;

exports[`vuepress-plugin-container ts-in-md.html 1`] = `
<!DOCTYPE html>
<html lang="en-US">

  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>VuePress</title>
    <meta name="description" content="">


    <!--before-resource-hints-->
    <link rel="preload" href="/assets/css/0.styles.css" as="style">
    <link rel="preload" href="/assets/js/styles.js" as="script">
    <link rel="preload" href="/assets/js/app.js" as="script">
    <link rel="preload" href="/assets/js/3.js" as="script">
    <link rel="preload" href="/assets/js/6.js" as="script">
    <link rel="prefetch" href="/assets/js/2.js">
    <link rel="prefetch" href="/assets/js/4.js">
    <link rel="prefetch" href="/assets/js/5.js">
    <link rel="prefetch" href="/assets/js/7.js">
    <!--after-resource-hints-->
    <link rel="stylesheet" href="/assets/css/0.styles.css">
  </head>

  <body>
    <!--before-vue-ssr-outlet-->
    <div id="app">
      <div>
        <h1>Hello, TypeScript</h1>
        <div class="content__default">
          <p>TypeScript in Markdown</p>
        </div>
      </div>
      <div class="global-ui"></div>
    </div>
    <!--after-vue-ssr-outlet-->
    <!--before-scripts-->
    <script src="/assets/js/styles.js" defer></script>
    <script src="/assets/js/3.js" defer></script>
    <script src="/assets/js/6.js" defer></script>
    <script src="/assets/js/app.js" defer></script>
    <!--after-scripts-->
  </body>

</html>
`;
